fix alignment issues portfolio

--- a/_sass/layout/_portfolio.scss
+++ b/_sass/layout/_portfolio.scss
@@ -24,10 +24,8 @@
         .portfolio-hover-content {
           font-size: 20px;
           position: absolute;
-          top: 50%;
+          bottom: 0;
           width: 100%;
-          height: 20px;
-          margin-top: -12px;
           text-align: center;
           color: white;
           i {
